project2/test1.y
%{
#include <iostream>
using namespace std;
%}

%union{
    int val;
    double dval;
    string* sval;
    int type;
    Datata* idD;
};

%token AND OR EQ LE_EQ GR_EQ NEQ
%token ARRAY BOOLEAN BEGIN BREAK CHAR CASE CONST CONTINUE DO ELSE END EXIT FALSE FOR FN IF IN INTEGER LOOP MODULE PRINT PRINTLN PROCEDURE REPEAT RETURN REAL STRING RECORD THEN TURE TYPE USE UTIL VAR WHILE
%token OF READ
%token <sval> IDENTIFIER
%token <val> INT_CONST
%token <dval> REAL_CONST
%token <sval> STR_CONST
%toekn <bval> BOOL_CONST

//type declare for non-terminal symbols
%type <> 
%type <type> var_type

%start program

/*precedence*/
%left '-'
%left '*' '/'
%left '+' '-'
%left '<' LE_EQ '=' GR_EQ '>' NEQ
%left '~'
%left AND 
%left OR
%nonassoc UMINUS

%%


program:    MODULE IDENTIFIER
            optional_var_con_declaration function_declaration 
            BEGIN
            optional_statement
            END IDENTIFIER'.'
            ;

Procedure_dec:      PROCEDURE IDENTIFIER 
                    optional_arg_parentheses opt_func_type
                    optional_var_con_declaration
                    BEGIN
                    optional_statement
                    END IDENTIFIER'.'
                ;

optional_var_con_declaration:   constants optional_var_con_declaration
                            |   variables optional_var_con_declaration
                            |   
                            ;

optional_statement:     optional_statement   statement
                    |   
                    ;

optional_arg_parentheses: '(' optional_arguments ')'
                |
                ;

optional_arguments: IDENTIFIER ':' data_type
                |   optional_arguments ',' IDENTIFIER ':' data_type
                |   
                ;

opt_func_type: ':' data_type
            |
            ;

data_type:      STRING
            |   INTEGER
            |   BOOLEAN
            |   REAL
            ;



constants:      CONST optional_con_exp
            ;

optional_con_exp:   optional_con_exp
                |   optional_con_exp optional_con_exp
                |   IDENTIFIER '=' expression ';'

                ;

const_value:    INT_CONST
            |   BOOL_CONST
            |   REAL_CONST
            |   STR_CONST
            ;

variables:      VAR optional_var_exp
            |   IDENTIFIER ':' ARRAY '[' INT_CONST ',' INT_CONST ']' OF data_type ';'
            ;

optional_var_exp:   optional_var_exp
                |   optional_var_exp optional_var_exp
                |   IDENTIFIER ':' data_type ';'
            ;

statement:      IDENTIFIER EQ expression ';'
            |   IDENTIFIER '[' expression ']' EQ expression ';'
            |   PRINT expression ';'
            |   PRINTLN expression ';'
            |   READ IDENTIFIER ';'
            |   RETURN ';'
            |   RETURN expression ';'
            |   function_invocation ';'
            |   conditional_statement
            |   loop_statement
            ;


expression:     IDENTIFIER
            |   const_value
            |   function_invocation
            |   expression '*' expression
            |   expression '/' expression
            |   expression '+' expression
            |   expression '-' expression
            |   expression '<' expression
            |   expression '>' expression
            |   expression '=' expression
            |   expression LE_EQ expression
            |   expression GR_EQ expression
            |   NEQ expression
            |   '~' expression
            |   expression AND expression
            |   expression OR expression
            |   IDENTIFIER '[' expression ']'   //数组 integer_expression
            |   IDENTIFIER '(' expression ')'   //comma-separed expression
            |   '-' expression %prec UMINUS
            ;

conditional_statement:  IF '(' expression ')' THEN
                        optional_statement
                        ELSE
                        optional_statement
                        END ';'
                        ;

loop_statement: WHILE '(' expression ')' DO 
                optional_statement
                END ';'
                ;

optional_statement:     statement
                    |   optional_statement statement
                    |
                    ;

function_invocation:    IDENTIFIER '(' optional_comma_separated_expression ')'
                    ;

optional_comma_separated_expression:    optional_comma_separated_expression ',' expression
                                    |   expression
                                    |
                                    ;

%%
